# PreAuthIQ

./: AGENTS.md  DELIVERABLES.md  README.md  SUBMISSION.md  pyproject.toml  render.yaml
backend/: main.py  pyproject.toml  requirements.txt
backend/api/: __init__.py  dependencies.py  middleware.py  routes.py
backend/core/: __init__.py  adjudicator.py  appeal.py  auditor.py  composer.py  config.py  engine.py  exceptions.py  extractor.py  llm_json.py  models.py  policy_catalog.py  prompt_templates.py  providers.py  response_parser.py  training_notes.py  validator.py
backend/core/pipeline/: __init__.py  context.py  runner.py  steps.py
backend/core/policy/: __init__.py  catalog.py  matcher.py  types.py
backend/core/report/: __init__.py  builder.py  coercion.py  context.py  errors.py  payload_utils.py  promotion_engine.py  text_match.py  types.py
backend/data/: promotion_rules.yaml  training_cases.json
backend/data/policies/: bariatric_surgery.yaml  biologic_therapy.yaml  cardiovascular_procedure.yaml  default.yaml  dme_home_oxygen.yaml  high_cost_imaging.yaml  post_acute_rehab.yaml  service_match_rules.yaml  spine_surgery.yaml
backend/scripts/: parse_workbook.py  run_complex_case.py  uptime_config.yaml  uptime_cron.sh
backend/skill/: assembler.py  constants.py  criteria_registry.py  pipeline.py  prompts.py  schema.py
backend/tests/: conftest.py  stub_provider.py  test_assembly_criteria.py  test_audit_and_appeal.py  test_complex_scenario.py  test_edge_cases.py  test_engine.py  test_engine_extensions.py  test_pipeline_parity.py  test_training_notes.py
(+60 files in other folders)
