[project]
name = "medclear-backend"
version = "0.2.0"

[tool.pyright]
venvPath = "."
venv = "venv"
ignore = [
    "**/venv/**",
    "**/.venv/**"
]
reportMissingImports = true
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportMissingTypeArgument = false
reportUntypedFunctionDecorator = false